start and we need to do the "MonkeyDetailsView"

--- a/DeleeRefreshMonkey/DeleteRefreshMonkey.csproj
+++ b/DeleeRefreshMonkey/DeleteRefreshMonkey.csproj
@@ -57,6 +57,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\MonkeyDetailsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\MonkeyView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
